fixed text-align h4 in "details"

--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
                             <p class="col-md-8 col-md-offset-1 text-left">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Delectus ipsam quod sint voluptate
                                 voluptatum. A ad amet asperiores eligendi illum libero magnam maxime nisi perferendis
-                                quis reiciendis ullam veritatis, voluptatum?</p>
+                                quis reiciendis ullam veritatis, voluptatum?dolores et quas molestias <span
+                                        class="contrast-font"> excepturi</span> sint occaecati
+                                cupiditate non provident,similique sunt in culpa qui officia deserunt
+                                mollitia animi, id est laborum et dolorum fuga. Et harum quidem r Lorem ipsum dolor sit
+                                amet, consectetur adipisicing elit. Amet consequuntur dicta, dolore dolorem earum esse
+                                ex excepturi explicabo </p>
                         </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="light">
@@ -117,7 +122,12 @@
                             <p class="col-md-8 col-md-offset-1 text-left">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Delectus ipsam quod sint voluptate
                                 voluptatum. A ad amet asperiores eligendi illum libero magnam maxime nisi perferendis
-                                quis reiciendis ullam veritatis, voluptatum?</p>
+                                quis reiciendis ullam veritatis, voluptatum?dolores et quas molestias <span
+                                        class="contrast-font"> excepturi</span> sint occaecati
+                                cupiditate non provident, similique sunt in culpa qui officia deserunt
+                                mollitia animi, id est laborum et dolorum fuga. Et harum quidem r Lorem ipsum dolor sit
+                                amet, consectetur adipisicing elit. Amet consequuntur dicta, dolore dolorem earum esse
+                                ex excepturi explicabo </p>
                         </div>
                     </div>
                 </div>
